# Dapi

./: .gitignore  README.md  UPGRADE_v4.0.md  __init__.py  client.py  exceptions.py  gateway.py  http_client.py  pyproject.toml  rate_limiter.py  requirements.txt  types.py  utils.py
api/: __init__.py  guilds.py  messages.py  users.py
dapi/: client.py  gateway.py
disapi/: client.py  gateway.py  utils.py
examples/: .env.example  advanced.py  basic.py  gateway.py  messages.py
models/: __init__.py  message.py
